syntax = "proto3";

package courses.v1;

import "buf/validate/validate.proto";
import "health/v1/health.proto";

option go_package = "github.com/codeharik/fairytales/courses/v1;coursesv1";

// CourseService provides methods to manage user courses.
service CourseService {
	// GetCoursesByUserId returns all courses for a specific user ID.
	rpc GetCoursesByUserId(GetCoursesByUserIdRequest) returns (GetCoursesByUserIdResponse) {
		option idempotency_level = NO_SIDE_EFFECTS;
	}
	
	// GetCoursesByCreatorId returns all courses created by a specific creator ID.
	rpc GetCoursesByCreatorId(GetCoursesByCreatorIdRequest) returns (GetCoursesByCreatorIdResponse) {
		option idempotency_level = NO_SIDE_EFFECTS;
	}
	
	// GetCourseById returns a course by its ID.
	rpc GetCourseById(GetCourseByIdRequest) returns (GetCourseByIdResponse) {
		option idempotency_level = NO_SIDE_EFFECTS;
	}
	
	// CreateCourse creates a new course.
	rpc CreateCourse(CreateCourseRequest) returns (CreateCourseResponse);
	
	// UpdateCourse updates an existing course.
	rpc UpdateCourse(UpdateCourseRequest) returns (UpdateCourseResponse);
	
	// DeleteCourse deletes a course.
	rpc DeleteCourse(DeleteCourseRequest) returns (DeleteCourseResponse);
	
	// HealthCheck verifies that all course service endpoints are accessible and working.
	rpc HealthCheck(health.v1.HealthCheckRequest) returns (health.v1.HealthCheckResponse) {
		option idempotency_level = NO_SIDE_EFFECTS;
	}
}

// GetCoursesByUserIdRequest is the request to get courses by user ID.
message GetCoursesByUserIdRequest {
	// Optional user ID. If not provided, uses the authenticated user's ID from session.
	optional bytes user_id = 1 [(buf.validate.field).bytes.len = 16];
	// Pagination: page number (1-indexed)
	int32 page = 2;
	// Pagination: number of items per page
	int32 page_size = 3;
}

// GetCoursesByUserIdResponse contains the list of user courses.
message GetCoursesByUserIdResponse {
	repeated Course courses = 1;
	int32 total = 2;
	int32 page = 3;
	int32 page_size = 4;
	int32 total_pages = 5;
}

// GetCoursesByCreatorIdRequest is the request to get courses by creator ID.
message GetCoursesByCreatorIdRequest {
	optional bytes creator_id = 1 [(buf.validate.field).bytes.len = 16];
	// Optional filter by status. If not provided or COURSE_STATUS_UNSPECIFIED, returns all courses.
	optional CourseStatus status_filter = 2;
	// Pagination: page number (1-indexed)
	int32 page = 3;
	// Pagination: number of items per page
	int32 page_size = 4;
}

// GetCoursesByCreatorIdResponse contains the list of creator courses.
message GetCoursesByCreatorIdResponse {
	repeated Course courses = 1;
	int32 total = 2;
	int32 page = 3;
	int32 page_size = 4;
	int32 total_pages = 5;
}

// Lesson represents a lesson within a course.
message Lesson {
	string title = 1;
	int32 duration = 2; // Duration in minutes
	optional string video_link = 3; // Optional video URL
	optional string code_md = 4; // Optional markdown code content
}

// Course represents a course entity.
message Course {
	bytes id = 1 [(buf.validate.field).bytes.len = 16];
	string title = 2;
	string description = 3;
	repeated bytes category_ids = 4 [(buf.validate.field).repeated.items.bytes.len = 16]; // Multiple category IDs
	CourseLevel level = 5;
	repeated Lesson lessons = 6;
	int32 price = 7;
	string image = 8;
	CourseStatus status = 9;
	bytes creator_id = 10 [(buf.validate.field).bytes.len = 16];
}

// GetCourseByIdRequest is the request to get a course by ID.
message GetCourseByIdRequest {
	bytes id = 1 [(buf.validate.field).bytes.len = 16];
}

// GetCourseByIdResponse contains the course.
message GetCourseByIdResponse {
	Course course = 1;
}

// CreateCourseRequest is the request to create a new course.
message CreateCourseRequest {
	string title = 1; // Required: Course title
	optional string description = 2;
	repeated bytes category_ids = 3 [(buf.validate.field).repeated.items.bytes.len = 16]; // Can be empty, categories can be added later
	optional CourseLevel level = 4;
	repeated Lesson lessons = 5; // Can be empty, lessons can be added later
	optional int32 price = 6;
	optional string image = 7;
	optional CourseStatus status = 8; // Defaults to DRAFT if not provided
	bytes creator_id = 9 [(buf.validate.field).bytes.len = 16]; // Required: Creator's user ID
}

// CreateCourseResponse contains the created course.
message CreateCourseResponse {
	Course course = 1;
}

// UpdateCourseRequest is the request to update a course.
message UpdateCourseRequest {
	bytes id = 1 [(buf.validate.field).bytes.len = 16];
	optional string title = 2;
	optional string description = 3;
	repeated bytes category_ids = 4 [(buf.validate.field).repeated.items.bytes.len = 16]; // If provided, replaces all categories
	optional CourseLevel level = 5;
	repeated Lesson lessons = 6; // If provided, replaces all lessons
	optional int32 price = 7;
	optional string image = 8;
	optional CourseStatus status = 9;
}

// UpdateCourseResponse contains the updated course.
message UpdateCourseResponse {
	Course course = 1;
}

// DeleteCourseRequest is the request to delete a course.
message DeleteCourseRequest {
	bytes id = 1 [(buf.validate.field).bytes.len = 16];
}

// DeleteCourseResponse confirms the deletion.
message DeleteCourseResponse {
	bool success = 1;
}

// CourseLevel represents the difficulty level of a course.
enum CourseLevel {
	COURSE_LEVEL_UNSPECIFIED = 0;
	COURSE_LEVEL_BEGINNER = 1;
	COURSE_LEVEL_INTERMEDIATE = 2;
	COURSE_LEVEL_ADVANCED = 3;
}

// CourseStatus represents the status of a course.
enum CourseStatus {
	COURSE_STATUS_UNSPECIFIED = 0;
	COURSE_STATUS_ACTIVE = 1;
	COURSE_STATUS_DRAFT = 2;
	COURSE_STATUS_ARCHIVED = 3;
}
